Update actions repo versions

--- a/.github/workflows/k8s-manifest-build-push-ecr.yml
+++ b/.github/workflows/k8s-manifest-build-push-ecr.yml
@@ -17,9 +17,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
       - name: Configure oidc for aws
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -29,7 +29,7 @@ jobs:
 
       - name: Login to Amazon ECR
         id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+        uses: aws-actions/amazon-ecr-login@v2
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -57,7 +57,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          repository: ${{ github.event.repository.name }}/devops-portfolio
+          repository: ${{ github.actor}}/devops-portfolio
           ref: "main"
           token: ${{ secrets.GITHIB_TOKEN }} # Github Personal Access Token
       - name: setup git config
