--- a/.github/workflows/multi-stage-workflow.yml
+++ b/.github/workflows/multi-stage-workflow.yml
@@ -31,27 +31,27 @@ jobs:
           push: true
           tags: ${{ env.DOCKERHUB_USERNAME }}/devops-portfolio:${{ github.sha }}
 
-  scan_upload: #This job checks the vulnerability of the Container Vulnerability Check & Upload it.
-    name: Container Vulnerability Check
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  # scan_upload: #This job checks the vulnerability of the Container Vulnerability Check & Upload it.
+  #   name: Container Vulnerability Check
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
-        with:
-          image-ref: "docker.io/${{ secrets.DOCKERHUB_USERNAME }}/devops-portfolio:${{ github.sha }}"
-          format: "template"
-          template: "@/contrib/sarif.tpl"
-          output: "trivy-results.sarif"
-          severity: "CRITICAL,HIGH"
+  #     - name: Run Trivy vulnerability scanner
+  #       uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
+  #       with:
+  #         image-ref: "docker.io/${{ secrets.DOCKERHUB_USERNAME }}/devops-portfolio:${{ github.sha }}"
+  #         format: "template"
+  #         template: "@/contrib/sarif.tpl"
+  #         output: "trivy-results.sarif"
+  #         severity: "CRITICAL,HIGH"
 
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: "trivy-results.sarif"
+  #     - name: Upload Trivy scan results to GitHub Security tab
+  #       uses: github/codeql-action/upload-sarif@v2
+  #       with:
+  #         sarif_file: "trivy-results.sarif"
 
   update_manifest: # this job will update the kubernetes manifest files image version tag
     runs-on: ubuntu-latest
