--- a/.github/workflows/multi-stage-workflow.yml
+++ b/.github/workflows/multi-stage-workflow.yml
@@ -57,7 +57,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build
-      - scan_upload
+      # - scan_upload
     steps:
       - uses: actions/checkout@v4
         with:
